--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/pulsatile"]
 	path = lib/pulsatile
-	url = git@github.com:BayesPulse/pulsatile.git
+	url = https://github.com/BayesPulse/pulsatile.git
