--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 output_xl/*.Rds filter=lfs diff=lfs merge=lfs -text
 output/diagnostics/*.pdf filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
